Fixed anchor scrolling on mobile layout

--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,13 @@ hr {
 }
 
 @media (max-width: 940px) {
+  a.anchor {
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
+  }
+
   .agenda main{
     margin-top: 65px;
   }
